[Docs] #1 : 회의록 이미지 경로 에러 수정

--- a/docs/docusaurus/docs/archive/minutes/20241111-meeting.mdx
+++ b/docs/docusaurus/docs/archive/minutes/20241111-meeting.mdx
@@ -46,7 +46,7 @@ last_update:
 
 ### ⚙️ 지도에 대한 설정 내용
 
-![20241111_3주차_회의_img1](./img/20241111_3주차_회의_img1.png)
+![20241111_3주차_회의_img1](img/20241111_3rd_meeting_img1.png)
 
 - 캔버스와 지도는 다음과 같은 데이터만 주고 받는다.
     
@@ -63,7 +63,7 @@ last_update:
 
 ### ⚙️ 역할 분배는 어떻게 할 것인가?
 
-![20241111_3주차_회의_img2](./img/20241111_3주차_회의_img2.png)
+![20241111_3주차_회의_img2](img/20241111_3rd_meeting_img2.png)
 
 #### 🤔 문제 상황
 
