--- a/docs/docusaurus/docs/archive/scrum/20241111-dailyscrum.mdx
+++ b/docs/docusaurus/docs/archive/scrum/20241111-dailyscrum.mdx
@@ -114,7 +114,7 @@ import ReactPlayer from 'react-player'
     - 자동화 과정에서 설정 충돌로 20시간 넘게 쓴듯해요.. 흑흑..
 - 네이버 지도 API 분석을 했고, 조금 커먼하게 사용할 수 있도록 손보는 중 입니다. → Lint ⇒ 이제는 풀면되는 단계. 그래서 논의하고, 풀생각입니다.
 
-![20241111-dailyscrum_img1.png](./img/20241111-dailyscrum_img1.png)
+![20241111-dailyscrum_img1.png](img/20241111-dailyscrum_img1.png)
 
 #### 🗣️ 현재 작업 상황
 
