[Docs] : 3주차 발표자료 레이아웃 수정

--- a/docs/docusaurus/docs/archive/summary/20241113-3week-presentation.mdx
+++ b/docs/docusaurus/docs/archive/summary/20241113-3week-presentation.mdx
@@ -273,17 +273,12 @@ import ReactPlayer from "react-player";
 
 ### - [BE] 트러블 슈팅 및 기록
 
-- [ESLint 오류 해결기: await을 for...of 반복문에서 사용하지 않기](https://velog.io/@happyhyep/ESLint-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0%EA%B8%B0-await%EC%9D%84-for...of-%EB%B0%98%EB%B3%B5%EB%AC%B8%EC%97%90%EC%84%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EC%A7%80-%EC%95%8A%EA%B8%B0)
-
-- [PostgreSQL 데이터베이스 설계 고민: Channel 테이블에 Guests 정보를 포함할지](https://velog.io/@happyhyep/PostgreSQL-%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EC%84%A4%EA%B3%84-%EA%B3%A0%EB%AF%BC-Channel-%ED%85%8C%EC%9D%B4%EB%B8%94%EC%97%90-Guests-%EC%A0%95%EB%B3%B4%EB%A5%BC-%ED%8F%AC%ED%95%A8%ED%95%A0%EC%A7%80)
-
-- [PostgreSQL에서 생성 시간 자동 설정하기 (generated_at의 NOT NULL 제약 조건)](https://velog.io/@happyhyep/PostgreSQL%EC%97%90%EC%84%9C-%EC%83%9D%EC%84%B1-%EC%8B%9C%EA%B0%84-%EC%9E%90%EB%8F%99-%EC%84%A4%EC%A0%95%ED%95%98%EA%B8%B0-generatedat%EC%9D%98-NOT-NULL-%EC%A0%9C%EC%95%BD-%EC%A1%B0%EA%B1%B4)
-
-- [비밀번호 검증 오류 해결기](https://velog.io/@happyhyep/%EB%B9%84%EB%B0%80%EB%B2%88%ED%98%B8-%EA%B2%80%EC%A6%9D-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0%EA%B8%B0)
-
-- [PostgreSQL 스키마로 인한 오류 해결하기](https://velog.io/@happyhyep/PostgreSQL-%EC%8A%A4%ED%82%A4%EB%A7%88%EB%A1%9C-%EC%9D%B8%ED%95%9C-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0%ED%95%98%EA%B8%B0)
-
-- [Node.js WebSocket 연결 문제 해결기](https://velog.io/@happyhyep/Node.js-WebSocket-%EC%97%B0%EA%B2%B0-%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0%EA%B8%B0)
+[▸ ESLint 오류 해결기: await을 for...of 반복문에서 사용하지 않기](https://velog.io/@happyhyep/ESLint-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0%EA%B8%B0-await%EC%9D%84-for...of-%EB%B0%98%EB%B3%B5%EB%AC%B8%EC%97%90%EC%84%9C-%EC%82%AC%EC%9A%A9%ED%95%98%EC%A7%80-%EC%95%8A%EA%B8%B0)
+[▸ PostgreSQL 데이터베이스 설계 고민: Channel 테이블에 Guests 정보를 포함할지](https://velog.io/@happyhyep/PostgreSQL-%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EC%84%A4%EA%B3%84-%EA%B3%A0%EB%AF%BC-Channel-%ED%85%8C%EC%9D%B4%EB%B8%94%EC%97%90-Guests-%EC%A0%95%EB%B3%B4%EB%A5%BC-%ED%8F%AC%ED%95%A8%ED%95%A0%EC%A7%80)
+[▸ PostgreSQL에서 생성 시간 자동 설정하기 (generated_at의 NOT NULL 제약 조건)](https://velog.io/@happyhyep/PostgreSQL%EC%97%90%EC%84%9C-%EC%83%9D%EC%84%B1-%EC%8B%9C%EA%B0%84-%EC%9E%90%EB%8F%99-%EC%84%A4%EC%A0%95%ED%95%98%EA%B8%B0-generatedat%EC%9D%98-NOT-NULL-%EC%A0%9C%EC%95%BD-%EC%A1%B0%EA%B1%B4)
+[▸ 비밀번호 검증 오류 해결기](https://velog.io/@happyhyep/%EB%B9%84%EB%B0%80%EB%B2%88%ED%98%B8-%EA%B2%80%EC%A6%9D-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0%EA%B8%B0)
+[▸ PostgreSQL 스키마로 인한 오류 해결하기](https://velog.io/@happyhyep/PostgreSQL-%EC%8A%A4%ED%82%A4%EB%A7%88%EB%A1%9C-%EC%9D%B8%ED%95%9C-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0%ED%95%98%EA%B8%B0)
+[▸ Node.js WebSocket 연결 문제 해결기](https://velog.io/@happyhyep/Node.js-WebSocket-%EC%97%B0%EA%B2%B0-%EB%AC%B8%EC%A0%9C-%ED%95%B4%EA%B2%B0%EA%B8%B0)
 
 ## 📝 다음주 목표
 
