[Docs][Chore] : Author 표시되게 수정

--- a/docs/docusaurus/dev_log/2024-11-15-header-implement/index.mdx
+++ b/docs/docusaurus/dev_log/2024-11-15-header-implement/index.mdx
@@ -1,5 +1,5 @@
 ---
-slug: dropdown-implement
+slug: header-implement
 title: '🎨 Header 컴포넌트로 확인하는 내가 컴포넌트를 설계하고 구현하는 방식'
 keywords: [Frontend, intro, react, typescript, dropdown, component, design]
 authors: [zen]
