--- a/docs/docusaurus/docs/archive/minutes/20241030-schedule-planning-meeting.mdx
+++ b/docs/docusaurus/docs/archive/minutes/20241030-schedule-planning-meeting.mdx
@@ -7,7 +7,7 @@ keywords: ['회의', '일정', '기획']
 tags: [minutes]
 last_update:
   date: 2024-10-30
-  authors: [zen]
+  author: zen
 ---
 
 ![image](https://github.com/user-attachments/assets/79ee03e1-e80e-4d26-8a6e-5088abdb40b3)
