--- a/docs/docusaurus/docs/archive/scrum/20241111-3week_mon_dailyscrum.mdx
+++ b/docs/docusaurus/docs/archive/scrum/20241111-3week_mon_dailyscrum.mdx
@@ -7,7 +7,7 @@ keywords: [ 'dailyscrum' ]
 tags: [ 'scrum' ]
 last_update:
   date: 2024-11-11
-  authors: [ zen ]
+  author: zen
 ---
 
 import ReactPlayer from 'react-player'
