--- a/docs/docusaurus/docs/archive/summary/20241028-teambuilding-summary.mdx
+++ b/docs/docusaurus/docs/archive/summary/20241028-teambuilding-summary.mdx
@@ -7,7 +7,7 @@ keywords: ['팀빌딩', '회의']
 tags: [summary]
 last_update:
   date: 2024-10-28
-  authors: [zen]
+  author: zen
 ---
 
 > GPT를 통한 정리와 개인적인 정리 내용이 합쳐져 있습니다.
