--- a/docs/docusaurus/docs/archive/intro.mdx
+++ b/docs/docusaurus/docs/archive/intro.mdx
@@ -7,7 +7,7 @@ keywords: ['members', 'team', '팀원', '소개']
 tags: []
 last_update:
   date: 2024-11-09
-  authors: [zen]
+  author: zen
 ---
 
 ## 📝 개요
