--- a/docs/docusaurus/docs/archive/minutes/20241111-3week_mon_meeting.mdx
+++ b/docs/docusaurus/docs/archive/minutes/20241111-3week_mon_meeting.mdx
@@ -7,7 +7,7 @@ keywords: ['회의']
 tags: [minutes]
 last_update:
   date: 2024-11-11
-  authors: [zen]
+  author: zen
 ---
 
 > 템플릿의 목적 → 회의를 최대한 효율적이고 알차면서 빠르게 끝내기.
