--- a/docs/docusaurus/docs/archive/summary/20241031-planning-summary.mdx
+++ b/docs/docusaurus/docs/archive/summary/20241031-planning-summary.mdx
@@ -7,7 +7,7 @@ keywords: ['회의', '내용정리']
 tags: [summary]
 last_update:
   date: 2024-10-31
-  authors: [zen]
+  author: zen
 ---
 
 ## 📝 오늘 하루 내용 요약
